--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,4 +1,7 @@
-@import "~bootstrap/dist/css/bootstrap.css";
+// @import "~bootstrap/dist/css/bootstrap.css";
+@import "functions";
+@import "variables";
+@import '~bootstrap/scss/bootstrap.scss';
 @import "~bootstrap-vue/dist/bootstrap-vue.css";
 
 html, body {
