--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -7,6 +7,7 @@
 html, body {
   max-height: 100vh;
   overflow-y: hidden;
+  background: linear-gradient(90deg,#0c2646,#204065 60%,#2a5788);
 }
 
 ::-webkit-scrollbar {
