--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,7 +1,11 @@
 // @import "~bootstrap/dist/css/bootstrap.css";
-@import "functions";
-@import "variables";
-@import '~bootstrap/scss/bootstrap.scss';
+@import "/bootstrap/functions";
+@import "/bootstrap/variables";
+@import "/bootstrap/mixins";
+@import "/bootstrap/card";
+
+@import '/bootstrap/bootstrap.scss';
+// @import '~bootstrap/scss/bootstrap.scss';
 @import "~bootstrap-vue/dist/bootstrap-vue.css";
 
 html, body {
