--- a/src/assets/scss/bootstrap/_variables.scss
+++ b/src/assets/scss/bootstrap/_variables.scss
@@ -38,14 +38,14 @@ $grays: map-merge(
 );
 
 
-$blue:    #007bff !default;
+$blue:    #3498db !default;
 $indigo:  #6610f2 !default;
-$purple:  #6f42c1 !default;
+$purple:  #8e44ad !default;
 $pink:    #e83e8c !default;
-$red:     #dc3545 !default;
-$orange:  #fd7e14 !default;
-$yellow:  #ffc107 !default;
-$green:   #28a745 !default;
+$red:     #e74c3c !default;
+$orange:  #f39c12 !default;
+$yellow:  #f1c40f !default;
+$green:   #2ecc71 !default;
 $teal:    #20c997 !default;
 $cyan:    #17a2b8 !default;
 
@@ -70,7 +70,7 @@ $colors: map-merge(
   $colors
 );
 
-$primary:       $purple !default;
+$primary:       $blue !default;
 $secondary:     $gray-600 !default;
 $success:       $green !default;
 $info:          $cyan !default;
